do som ui changes

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       
      <!-- section start -->
       <section id="sect1" class="h-auto  w-full flex flex-col lg:flex-row items-center justify-evenly gap-4 py-7">
-        <div class="lg:h-[40vh] lg:w-[35%] w-full h-auto  md:text-center lg:text-start text-center">
+        <div class="lg:h-[40vh] lg:w-[35%] w-full h-auto  md:text-center lg:text-start text-center px-3 md:px-0">
             <h1 class="text-[45px] font-bold my-[20px] ml-5" >Hi, I’m Kashish Sareen</h1>
-            <p class="lg:w-[70%] text-[20px]  mb-[20px] ml-5 md:place-self-center md:w-[50%] md:text-center md:text-[16px] lg:text-start lg:place-self-start">A passionate Web Designer. I am passionate about designing responsive and user-friendly websites. I focus on building modern designs with smooth functionality and writing clean, structured code.</p>
+            <p class="lg:w-[70%] text-[20px]  mb-[20px] lg:ml-5 md:place-self-center md:w-[50%] md:text-center md:text-[16px]   lg:place-self-start">A passionate Web Designer. I am passionate about designing responsive and user-friendly websites. I focus on building modern designs with smooth functionality and writing clean, structured code.</p>
             <a href="#work" class="inline-flex items-center py-[10px] px-[15px] bg-[#5454D4] font-semibold mt-[10px] ml-5 mb-[10px] rounded-4xl hover:bg-white hover:text-blue-600">View My Work <i class="ri-arrow-right-up-line ml-2"></i></a>
             <a href="#contact" class="inline-flex items-center py-[10px] px-[18px] bg-[#5454D4] font-semibold mt-[10px] ml-5 mb-[10px]  rounded-4xl hover:bg-white hover:text-blue-600">Contact Me</a>
         </div>
@@ -81,7 +81,7 @@
             </div>
       
             <div class="md:w-1/2 w-full">
-                <h2 class="text-3xl font-bold mb-4 text-indigo-300">About Me</h2>
+                <h2 class="text-3xl font-bold mb-4 text-indigo-300 text-center md:text-start">About Me</h2>
                 <p class="mb-4 leading-relaxed">
                     My name is <strong>Kashish Sareen</strong>. I have completed my <strong>Bachelor of Computer Applications (BCA)</strong>.
                     I am passionate about web designing.
@@ -180,7 +180,7 @@
 
          <!-- footer start -->
           <section id="contact" class="h-auto w-full">
-            <div class="h-[20vh] w-full  flex flex-col items-center justify-evenly gap-4">
+            <div class="h-[20vh] w-full  flex flex-col items-center justify-evenly gap-4 px-3 md:">
                 <h1 class="text-[50px]  border-b-2 border-red-300 font-semibold">Contact Me</h1>
                 <p class="lg:text-[20px] md:text-[15px] md:w-[70%] text-center ">I am seeking opportunities as a Web Designer to build clean, responsive, and user-friendly websites please feel free to connect with me.</p>
             </div>
