--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <i class="ri-mail-line"></i>
                 sareenkashish71@gmail.com
             </a>
-            <a href="tel:+9888736229" class="text-[20px] lg:text-[30px] hover:text-cyan-400 transition-colors duration-300 flex items-center gap-2">
+            <a href="tel:+9188736229" class="text-[20px] lg:text-[30px] hover:text-cyan-400 transition-colors duration-300 flex items-center gap-2">
                 <i class="ri-phone-line"></i>
                 9888736229
             </a>
@@ -209,6 +209,12 @@
             mobile.querySelectorAll('a').forEach(a => {
                 a.addEventListener('click', ()=> mobile.classList.add('hidden'));
             });
+            // close on scroll or touchmove (mobile)
+            const closeOnScroll = () => {
+                if (!mobile.classList.contains('hidden')) mobile.classList.add('hidden');
+            };
+            window.addEventListener('scroll', closeOnScroll, { passive: true });
+            window.addEventListener('touchmove', closeOnScroll, { passive: true });
         })();
     </script>
 </body>
